@@ -1,11 +1,12 @@
 1.1beta9:
 
+ - cannot add IT Service link
+ - "* info" graphs on screens do not work
  - http://www.zabbix.com/forum/showthread.php?t=2736
  - does ZABBIX maintain Host availability of monitored by SNMP
  - when unlinking a host from template, add option (Unlink&Delete, Unlink Only)
  - Overview screen, item macros are not substituted: Free disk space on $1
  - change size of functions.function to varchar(12) for logseverity 
- - fix simple checks
  - add optimisation flags -O2 to configure
  - remember snmp community on per host level
  - net.if.stat collected as double, must be as uint64
