@@ -23,9 +23,13 @@ int	get_value_simple(DB_ITEM *item, AGENT_RESULT *result)
 {
 	char	*t;
 	char	c[MAX_STRING_LEN];
-	char	s[MAX_STRING_LEN];
 	char	param[MAX_STRING_LEN];
 	char	error[MAX_STRING_LEN];
+	char	service[MAX_STRING_LEN];
+	char	service_sysinfo[MAX_STRING_LEN];
+	char	ip[MAX_STRING_LEN];
+	char	port[MAX_STRING_LEN];
+	int	port_int=0;
 	int	ret = SUCCEED;
 	char	*l,*r;
 	/* Assumption: host name does not contain '_perf'	*/
@@ -78,6 +82,83 @@ int	get_value_simple(DB_ITEM *item, AGENT_RESULT *result)
 			return NOTSUPPORTED;
 		}
 	}
+	else
+	{
+		ip[0]=0;
+		port[0]=0;
+		service[0]=0;
+		if(num_param(item->key) == 1)
+		{
+			if(get_param(item->key, 1, service, MAX_STRING_LEN) != 0)
+			{
+				ret = NOTSUPPORTED;
+			}
+		}
+		else if(num_param(item->key) == 2)
+		{
+			if(get_param(item->key, 1, service, MAX_STRING_LEN) != 0)
+			{
+				ret = NOTSUPPORTED;
+			}
+			if(get_param(item->key, 2, port, MAX_STRING_LEN) != 0)
+			{
+				ret = NOTSUPPORTED;
+			}
+			else if(is_uint(port)==SUCCEED)
+			{
+				port_int=atoi(port);
+			}
+			else
+			{
+				snprintf(error,MAX_STRING_LEN-1,"Port number must be numeric in [%s]", item->key);
+				zabbix_log( LOG_LEVEL_WARNING, error);
+				result->str=strdup(error);
+				ret = NOTSUPPORTED;
+			}
+		}
+		else
+		{
+			snprintf(error,MAX_STRING_LEN-1,"Too many parameters in [%s]", item->key);
+			zabbix_log( LOG_LEVEL_WARNING, error);
+			result->str=strdup(error);
+			ret = NOTSUPPORTED;
+		}
+
+		if(ret == SUCCEED)
+		{
+			if(item->useip==1)
+			{
+				strscpy(ip,item->ip);
+			}
+			else
+			{
+				strscpy(ip,item->host);
+			}
+
+			t = strstr(service,"_perf");
+			if(t != NULL)
+			{
+				t[0]=0;
+				strscpy(service_sysinfo,"net.tcp.service.perf");
+			}
+			else	strscpy(service_sysinfo,"net.tcp.service");
+
+			if(port_int == 0)
+			{
+				snprintf(c,sizeof(c)-1,"%s[%s,%s]",service_sysinfo,service,ip);
+			}
+			else
+			{
+				snprintf(c,sizeof(c)-1,"%s[%s,%s,%d]",service_sysinfo,service,ip,port_int);
+			}
+			zabbix_log( LOG_LEVEL_DEBUG, "Sysinfo [%s]", c);
+		}
+		else
+		{
+			return ret;
+		}
+	}
+/*
 	else if(NULL == strstr(item->key,"_perf"))
 	{
 		if(item->useip==1)
@@ -104,6 +185,7 @@ int	get_value_simple(DB_ITEM *item, AGENT_RESULT *result)
 			snprintf(c,sizeof(c)-1,"net.tcp.service.perf[%s,%s]",s,item->host);
 		}
 	}
+*/
 
 	if(process(c, 0, result) == NOTSUPPORTED)
 	{
