@@ -1,5 +1,6 @@
 Changes for 1.1beta10:
 
+ - fixed evaluation of simple checks (Alexei)
  - fixed history cleaning for logs (Eugene)
  - fixed left axis calculation of graph (Eugene)
  - fixed Win32 ZABBIX agent log monitoring (Eugene)
